panko-compiletest/src/snapshots/panko_compiletest__layout-panko__tests__cases__execute__test_assign_through_ptr_ref_of_deref.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=layout"
    - "--stop-after=layout"
    - panko/tests/cases/execute/test_assign_through_ptr_ref_of_deref.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit
   (function-definition
      (main~0 `fn() -> int` (static main))
      (compound-statement
         (definition (x~1 `int` @0) (42 `int` @0))
         (definition (p~2 `ptr<int>` @8)
            (addressof `ptr<int>` @8
               (x~1 `int` @0)))
         (expression
            (assign `int` @16
               (deref `int` @16
                  (addressof `ptr<int>` @24
                     (deref `int` @24 (p~2 `ptr<int>` @8))))
               (27 `int` @32)))
         (return (x~1 `int` @0)))))

----- stderr -----
