panko-compiletest/src/snapshots/panko_compiletest__layout-panko__tests__cases__execute__test_assignment_from_variable.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=layout"
    - "--stop-after=layout"
    - panko/tests/cases/execute/test_assignment_from_variable.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit
   (function-definition
      (main~0 `fn() -> int` (static main))
      (compound-statement
         (definition (a~1 `int` @0) (0 `int` @0))
         (definition (b~2 `int` @4) (42 `int` @4))
         (expression
            (assign `int` @4
               (b~2 `int` @4)
               (a~1 `int` @0)))
         (return (b~2 `int` @4)))))

----- stderr -----
