panko-compiletest/src/snapshots/panko_compiletest__layout-panko__tests__cases__execute__test_return_global_variable_in_main.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=layout"
    - "--stop-after=layout"
    - panko/tests/cases/execute/test_return_global_variable_in_main.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit
   (definition (return_value~0 `int` (static return_value)) (5 `int` (static return_value)))
   (function-definition
      (main~1 `fn() -> int` (static main))
      (compound-statement
         (return (return_value~0 `int` (static return_value))))))

----- stderr -----
